<resources>
    <string name="app_name">Calculadora</string>
    <string name="historico_resultados">Histórico Resultados</string>
    <string name="calculadora">Calculadora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="c">c</string>
    <string name="abreParentese">(</string>
    <string name="fechaParentese">)</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiplica">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_diminui">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_soma">+</string>
    <string name="_ponto">.</string>
    <string name="del">Del</string>
    <string name="_igual">=</string>
    <string name="voltar">Voltar</string>
    <string name="hist_rico_de_resultados">Histórico de Resultados</string>
</resources>